--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "untitled2",
   "version": "1.0.0",
-  "scripts": {},
-  "dependencies": {
-    "dayjs": "^1.11.13"
-  }
+  "scripts": {}
 }
