--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node ./src/main.ts"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "rimraf": "^6.0.1"
   },
   "prettier": {
